# project_dataengineer

./: .gitignore  README.md  dag.py  pyproject.toml
novadrive/: dbt_project.yml
