[tool.poetry]
name = "project-dataengineer"
version = "0.1.0"
description = ""
authors = ["MvJr98 <tnveloso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.5"
dbt-snowflake = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
